<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    tools:context=".client.ClientActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/topAppBarClient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@null"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/menu_mainz"
            app:title="@string/add_a_client" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/client_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarClient"
        app:startIconDrawable="@drawable/baseline_search_24">

        <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/client_name_ed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/client_name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/client_code_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/client_name_layout"
        app:layout_constraintStart_toStartOf="@id/client_name_layout"
        app:layout_constraintTop_toBottomOf="@id/client_name_layout"
        app:startIconDrawable="@drawable/baseline_search_24">

        <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/code_client_ed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/invoice_code"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/add_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/baseline_add_circle_24"
        app:layout_constraintEnd_toEndOf="@id/client_code_layout"
        app:layout_constraintStart_toStartOf="@id/client_code_layout"
        app:layout_constraintTop_toBottomOf="@id/client_code_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/client_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="@id/client_code_layout"
        app:layout_constraintStart_toStartOf="@id/client_code_layout"
        app:layout_constraintTop_toBottomOf="@id/add_client"
        tools:listitem="@layout/list_client" />
</androidx.constraintlayout.widget.ConstraintLayout>