<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/iv_circle"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="-80dp"
        android:layout_marginTop="-80dp"
        android:src="@drawable/shape_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/blue" />

    <ImageView
        android:id="@+id/iv_circle1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="-150dp"
        android:src="@drawable/shape_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/blue" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginBottom="-240dp"
        android:src="@drawable/shape_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/blue" />

    <ImageView
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginEnd="-230dp"
        android:layout_marginBottom="-150dp"
        android:src="@drawable/shape_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/blue" />

    <ImageView
        android:layout_marginTop="100dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/oo"
        app:layout_constraintBottom_toTopOf="@+id/tv_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="40sp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_circle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_content"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="80dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/iv_usrnema"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/baseline_person_24"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/blue" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="0dp"
                android:autofillHints="UesrName"
                android:gravity="center"
                android:textColor="@color/black"
                android:inputType="textPersonName"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="48dp"
                android:background="@color/white"
                android:hint="@string/user_name"
                android:minHeight="48dp"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/iv_usrnema"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_usrnema"
                app:layout_constraintTop_toTopOf="@id/iv_usrnema" />


            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_pass"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/baseline_lock_outline_24"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:tint="@color/blue" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:autofillHints="Password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="48dp"
                android:background="@color/white"
                android:hint="@string/password"
                android:minHeight="48dp"
                android:gravity="center"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/iv_pass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_pass"
                app:layout_constraintTop_toTopOf="@id/iv_pass" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_content1"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="80dp"
        android:layout_marginTop="5dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/iv_usrnema1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/baseline_lock_outline_24"
                app:layout_constraintBottom_toTopOf="@+id/view1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/blue" />

            <EditText
                android:id="@+id/confirmPassEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="48dp"
                android:textColor="@color/black"
                android:autofillHints="ConfirmPassword"
                android:background="@color/white"
                android:gravity="center"
                android:hint="@string/confirmpassword"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/iv_usrnema1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_usrnema1"
                app:layout_constraintTop_toTopOf="@id/iv_usrnema1" />


            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_pass1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/baseline_alternate_email_24"
                app:layout_constraintBottom_toBottomOf="@+id/view1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:tint="@color/blue" />

            <EditText
                android:id="@+id/emailEditText1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:layout_marginEnd="48dp"
                android:autofillHints="EmailAddress"
                android:background="@color/white"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/iv_pass1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_pass1"
                app:layout_constraintTop_toTopOf="@id/iv_pass1" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:cardCornerRadius="40dp"
        app:cardElevation="8sp"
        app:layout_constraintEnd_toEndOf="@+id/cv_content1"
        app:layout_constraintStart_toStartOf="@+id/cv_content1"
        app:layout_constraintTop_toBottomOf="@+id/cv_content1" />
</androidx.constraintlayout.widget.ConstraintLayout>